<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notification Count</string>
    <string name="settings_increment_on_update">Workaround</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_system">System</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_info">Info</string>
    <string name="test_notification_text">This is a test notification!</string>
    <string name="test_notification_only_text">%d is my number!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="app_icon_cd">Application icon</string>
    <string name="pref_apps_increase_onupdate_title">Exception list</string>
    <string name="pref_apps_increase_onupdate_auto">Automatic (default)</string>
    <string name="pref_apps_increase_onupdate_titlenumber">Title containing number</string>
    <string name="pref_apps_increase_onupdate_contentnumber">Content containing number</string>
    <string name="pref_apps_increase_onupdate_summarynumber">Summary containing number</string>
    <string name="pref_apps_increase_onupdate_stocknumber">Don\'t add number</string>
    <string name="pref_apps_increase_onupdate_nonumber">Don\'t show any number</string>
    <string name="pref_apps_increase_onupdate_count">Count updates</string>
    <string name="pref_apps_increase_onupdate_summary">Force specific apps to use a specific method to retrieve the notification number (or to not use a number at all).</string>
    <string name="pref_appear_number_badge_color_title">Number badge color</string>
    <string name="pref_appear_number_badge_color_summary">The color in which the number badge will be tinted.</string>
    <string name="pref_appear_number_color_title">Number text color</string>
    <string name="pref_appear_number_color_summary">The color in which the number will be tinted.</string>
    <string name="pref_appear_number_badge_border_color_title">Number badge border color</string>
    <string name="pref_appear_number_badge_border_color_summary">The color in which the number badge\'s border will be tinted.</string>
    <string name="pref_appear_number_badge_border_width_title">Number badge border width</string>
    <string name="pref_appear_number_badge_border_width_summary">Current: %s dp</string>
    <string name="pref_appear_number_size_title">Number size</string>
    <string name="pref_appear_number_size_summary">Current size: %s dp</string>
    <string name="pref_appear_number_badge_shape">Number badge shape</string>
    <string name="pref_appear_number_badge_shape_0">Oval</string>
    <string name="pref_appear_number_badge_shape_1">Rectangle</string>
    <string name="pref_appear_number_badge_shape_2">Round rectangle</string>
    <string name="pref_appear_number_badge_shape_3">Rectangular circle</string>
    <string name="pref_appear_number_badge_alpha_title">Number badge alpha</string>
    <string name="pref_appear_number_badge_alpha_summary">Current: %s (0 = transparent, 255 = opaque)</string>
    <string name="pref_apps_default_increase_onupdate_title">Use whitelist</string>
    <string name="pref_apps_default_increase_onupdate_summary_on">Current setting: Whitelist. Apps needing adding of notification number have to be explicitly specified.</string>
    <string name="pref_apps_default_increase_onupdate_summary_off">Current setting: Blacklist. Notification Count will try to add a number to every notification, wrongly behaving apps have to be excluded explicitly.</string>
    <string name="pref_apps_alternate_private_title">Add number to sensitive content</string>
    <string name="pref_apps_alternate_private_summary">This will add the count number to a secure lockscreen in Lollipop or above, if an app does not declare its own text for this.\nThis disables the \"count updates\" feature!</string>
    <string name="pref_appear_show_app_icon_title">Show launcher icon</string>
    <string name="pref_appear_show_app_icon_summary">You can still launch the module settings via Xposed Installer.</string>
    <string name="pref_test_notif_w_number_title">With number</string>
    <string name="pref_test_notif_w_number_summary">Creates a test notification with a random number.</string>
    <string name="pref_test_notif_wo_number_title">Without number</string>
    <string name="pref_test_notif_wo_number_summary">Creates a test notification without a number.</string>
    <string name="pref_test_notif_wt_number_title">With number in title</string>
    <string name="pref_test_notif_wt_number_summary">Creates a test notification without a number, but with the title containing the number.</string>
    <string name="pref_test_notif_wc_number_title">With number in content</string>
    <string name="pref_test_notif_wc_number_summary">Creates a test notification without a number, but with the content text containing the number. Will only work when set in the exception list.</string>
    <string name="pref_test_notif_ws_number_title">With number in summary</string>
    <string name="pref_test_notif_ws_number_summary">Creates a test notification without a number, but with a summary text containing the number.</string>
    <string name="pref_clear_info_title">Clean App Update</string>
    <string name="pref_clear_info_summary">Notification Count has been updated.
        \nThis update introduces a new way of excluding apps and therefore saves other settings.
        \n\nPlease note that all your settings up to this point will be lost and will be erased when cklicking \"OK\".
        \nThis mainly helps saving storage space.</string>
    <string name="pref_version_number_title">Notification Count Version</string>
    <string name="pref_version_number_summary">Version %s
        \n\nBase module by Benjamin Bukowski,\nGitHub user bbukowski.
        \nContinued abandoned development.
        \nSo, developed by Woalk Software since then,\nGitHub user woalk.</string>
    <string name="pref_system_integration_title">System settings integration</string>
    <string name="pref_system_integration_summary">Add Notification Count settings to the long-click menu of every notification.
    \nNeeds reboot to apply.</string>
    <string name="single_app_menu_item_title">Notification Count settings</string>
    <string name="single_app_error_title">Error</string>
    <string name="single_app_error_pkg_not_found">The requested app was not found on this device.</string>
    <string name="single_app_error_misc">An error occurred while opening the settings.</string>
    <string name="alternate_private_text">%1$d notifications</string>
    <string name="hint_search_apps">Search app</string>
    <string name="item_search">Search</string>
    <string name="content_d_close_search">Clear search</string>
    
</resources>