<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:woalk="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_increment_on_update" >
        <Preference
            android:key="apps_list"
            android:summary="@string/pref_apps_increase_onupdate_summary"
            android:title="@string/pref_apps_increase_onupdate_title" >
            <intent android:action="com.woalk.apps.xposed.notifcount.WHITELIST" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_appearance" >
        <ListPreference
            android:key="number_size"
            android:title="@string/pref_appear_number_size"
            android:dialogTitle="@string/pref_appear_number_size"
            android:entries="@array/pref_appear_number_size_list"
            android:entryValues="@array/pref_appear_number_size_value_list"
            android:defaultValue="0" />
        <com.woalk.apps.lib.colorpicker.ColorPreference
            android:key="number_badge_color"
            android:title="@string/pref_appear_number_badge_color_title"
            android:summary="@string/pref_appear_number_badge_color_summary"
            woalk:allowCustomColor="true"
            woalk:colors="@array/colors"
            woalk:dialogTitle="@string/pref_appear_number_badge_color_title"
            woalk:columns="4"
            android:defaultValue="@color/colors_white" />
        <com.woalk.apps.lib.colorpicker.ColorPreference
            android:key="number_color"
            android:title="@string/pref_appear_number_color_title"
            android:summary="@string/pref_appear_number_color_summary"
            woalk:allowCustomColor="true"
            woalk:colors="@array/colors"
            woalk:dialogTitle="@string/pref_appear_number_color_title"
            woalk:columns="4"
            android:defaultValue="@color/colors_black" />
        <com.woalk.apps.lib.colorpicker.ColorPreference
            android:key="number_badge_border_color"
            android:title="@string/pref_appear_number_badge_border_color_title"
            android:summary="@string/pref_appear_number_badge_border_color_summary"
            woalk:allowCustomColor="true"
            woalk:colors="@array/colors"
            woalk:dialogTitle="@string/pref_appear_number_badge_border_color_title"
            woalk:columns="4"
            android:defaultValue="@color/colors_lightgray" />
        <CheckBoxPreference
            android:key="show_app_icon"
            android:title="@string/pref_appear_show_app_icon_title"
            android:summary="@string/pref_appear_show_app_icon_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_debug" >
        <Preference
            android:key="test_notif_w_number"
            android:summary="@string/pref_test_notif_w_number_summary"
            android:title="@string/pref_test_notif_w_number_title" />
        <Preference
            android:key="test_notif_wo_number"
            android:summary="@string/pref_test_notif_wo_number_summary"
            android:title="@string/pref_test_notif_wo_number_title" />
        <Preference
            android:key="test_notif_wt_number"
            android:summary="@string/pref_test_notif_wt_number_summary"
            android:title="@string/pref_test_notif_wt_number_title" />
        <Preference
            android:key="test_notif_ws_number"
            android:summary="@string/pref_test_notif_ws_number_summary"
            android:title="@string/pref_test_notif_ws_number_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_info" >
        <Preference
            android:key="version_number"
            android:summary="@string/pref_version_number_summary"
            android:title="@string/pref_version_number_title"
            android:selectable="false" />
    </PreferenceCategory>

</PreferenceScreen>