<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_horizontal|top"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/itemlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="fill_horizontal|center_vertical"
        android:orientation="horizontal"
        android:weightSum="1" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0"
            android:contentDescription="@string/app_icon_cd"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:minHeight="48dp"
            android:orientation="vertical" >

            <TextView
                android:id="@android:id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@android:id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="42dp"
            android:layout_weight="0"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/value"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="6dp"
            android:layout_weight="0"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:textColor="#009688"
            android:textSize="21sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="gone" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pref_apps_increase_onupdate_auto" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_apps_increase_onupdate_nonumber" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_apps_increase_onupdate_stocknumber" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_apps_increase_onupdate_titlenumber" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_apps_increase_onupdate_summarynumber" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_apps_increase_onupdate_count" />
    </RadioGroup>

</LinearLayout>